--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,110 @@
 body {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-  margin:0 15%;
+  margin: 0 15%;
 }
-h1{
+h1 {
   display: flex;
   justify-content: center;
   text-transform: uppercase;
   font-weight: 800;
 }
-.add-problem-input{
+.add-problem label {
+  font-size: 1.3em;
+}
+.add-problem input {
   margin-left: 20px;
-  height: 40px;
+  font-size: 20px;
+  border-radius: 40px;
+  line-height: 30px;
+  padding-left: 17px;
+  outline: none;
+}
+.add-problem-input {
+  position: relative;
+  display: inline-block;
+}
+.add-problem-input i {
+  position: absolute;
+  font-size: 1.2em;
+  right: 10px;
+  margin-top: 5px;
+  color: gray;
+}
+.add-problem-input i:hover {
+  cursor: pointer;
+  color: black;
+}
+.problem-detail {
+  font-size: 1.2em;
+}
+.problem-detail-label {
+  font-weight: 600;
+  margin-right: 5px;
+}
+.problem-detail button {
+  background-color: orange;
+  border: none;
+  font-size: 1em;
+  padding: 7px;
+  cursor: pointer;
+}
+.problem-detail button:hover {
+  background-color: rgb(207, 140, 16);
+}
+.Easy {
+  background-color: green;
+  padding: 3px;
+  color: white;
+  font-weight: 600;
+  border-radius: 2px;
+}
+.Medium {
+  background-color: orange;
+  color: white;
+  padding: 3px;
+  font-weight: 600;
+  border-radius: 2px;
+}
+.Hard {
+  background-color: red;
+  color: white;
+  padding: 3px;
+  font-weight: 600;
+  border-radius: 2px;
+}
+.warning {
+  color: red;
+}
+table {
+  font-size: 1.3em;
+  border-collapse: collapse;
+  margin: 25px 0;
+  min-width: 850px;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+}
+table thead tr {
+  text-align: left;
+  background-color: orange;
+}
+table th,
+table td {
+  padding: 8px 12px;
+  min-width: 80px;
+}
+table tbody tr {
+  border-bottom: 1px solid #dddd;
+}
+table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+.action {
+  background-color: peru;
+  cursor: pointer;
+  color: white;
+  padding: 5px;
+  border-radius: 3px;
+}
+.action:hover {
+  background-color: rgb(173, 112, 51);
 }
